--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
 "dependencies": {
-  "react": "^18.2.25",
-  "react-dom": "^18.2.25"
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "three": "^0.146.0"
 },
 "devDependencies": {
-  "@types/react": "^18.2.25",
-  "@types/react-dom": "^18.2.25",
-  "@vitejs/plugin-react": "^4.0.0",
-  "vite": "^4.3.8"
+  "@types/react": "^19.0.0",
+  "@types/react-dom": "^19.0.0",
+  "@types/three": "^0.146.0",
+  "@vitejs/plugin-react": "^4.1.0",
+  "vite": "^4.3.9"
 }
 }
